dsp-cli/tests/snapshots/cli__help_vre_sparql.snap
---
source: dsp-cli/tests/cli.rs
expression: text
---
Raw SPARQL 1.1 query passthrough to the server's own triplestore.

Deliberately does NOT abstract DSP-API: the response is the store's own document, byte-exact, in whatever media type it negotiated. No Renderer, no --format. Requires a SystemAdmin token. See also: dsp docs sparql

Usage: dsp vre sparql [OPTIONS] <COMMAND>

Commands:
  query  Run a raw SPARQL 1.1 query against the server's triplestore
  help   Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose...
          Increase log verbosity (-v=info, -vv=debug, -vvv=trace). RUST_LOG overrides

      --allow-insecure-server
          Allow a non-local --server to use insecure http:// (see `dsp docs connecting`)
          
          [env: DSP_ALLOW_INSECURE_SERVER=]

  -h, --help
          Print help (see a summary with '-h')
