dsp-cli/tests/snapshots/cli__help_vre_vocabulary.snap
---
source: dsp-cli/tests/cli.rs
expression: text
---
Manage controlled vocabularies within a project (DSP-API "list").

See also: dsp docs concepts

Usage: dsp vre vocabulary [OPTIONS] <COMMAND>

Commands:
  list      List a project's vocabularies
  describe  Describe a single vocabulary's full tree
  help      Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose...
          Increase log verbosity (-v=info, -vv=debug, -vvv=trace). RUST_LOG overrides

      --allow-insecure-server
          Allow a non-local --server to use insecure http:// (see `dsp docs connecting`)
          
          [env: DSP_ALLOW_INSECURE_SERVER=]

  -h, --help
          Print help (see a summary with '-h')
