dsp-cli/tests/snapshots/cli__help_vre_vocabulary_list.snap
---
source: dsp-cli/tests/cli.rs
expression: text
---
List a project's vocabularies.

See also: dsp docs concepts

Usage: dsp vre vocabulary list [OPTIONS]

Options:
  -s, --server <SERVER>
          DSP server URL or shortcut (e.g. `https://api.example.org` or `prod`). Can also be set via the `DSP_SERVER` environment variable or a `.env` file
          
          [env: DSP_SERVER=]

  -v, --verbose...
          Increase log verbosity (-v=info, -vv=debug, -vvv=trace). RUST_LOG overrides

      --allow-insecure-server
          Allow a non-local --server to use insecure http:// (see `dsp docs connecting`)
          
          [env: DSP_ALLOW_INSECURE_SERVER=]

  -p, --project <PROJECT>
          Shortcode, shortname, or IRI of the project

      --filter <FILTER>
          Filter vocabularies by case-insensitive substring over name and every label

      --count
          Also fetch each vocabulary's full tree to show node/depth counts (one extra HTTP request per vocabulary). Off by default

      --format <FORMAT>
          Output format (default: prose)

          Possible values:
          - prose: Rich human-readable prose output with contextual hints (default)
          - json:  Newline-delimited JSON (one object per line)
          - lines: One identifier per line, for shell pipeline consumption
          - csv:   Comma-separated values with a header row
          - tsv:   Tab-separated values with a header row
          
          [default: prose]

  -j, --json
          Shortcut for --format=json

  -l, --lines
          Shortcut for --format=lines

      --columns <COLS>
          Output columns for tabular formats (csv, tsv, lines): comma-separated list that selects and reorders columns. Valid names are listed in the Columns line below. Duplicates are rejected

      --no-header
          Omit the csv/tsv header row, e.g. appending rows to an existing file

      --header-only
          Emit only the csv/tsv header row, no data rows. Note: the command still contacts the server

  -h, --help
          Print help (see a summary with '-h')

Columns (--columns): name, iri, label_en, label_de, label_fr, label_it, label_rm, label, comment_en, comment_de, comment_fr, comment_it, comment_rm, comment, nodes, depth

--filter matches name and every label value in every language (all languages kept — no language preference); comments are not scanned.
--count fetches each vocabulary's full tree (one extra request PER vocabulary, sequential — this can be dozens of calls on a project with many large vocabularies); a failed per-tree fetch degrades that row's nodes/depth to empty rather than failing the whole command, and is disclosed.
