dsp-cli/tests/snapshots/cli__insecure_http_refused_json.snap
---
source: dsp-cli/tests/cli.rs
expression: stdout
---
{"_meta":{"exit_code":2},"error":{"kind":"usage","message":"usage error: refusing to use \"http://api.example.org\" over plain HTTP: an authenticated command sends a bearer token, which would cross the network in cleartext. Use https://, a local address (loopback or unspecified (127.0.0.0/8, ::1, 0.0.0.0, ::) or localhost), or override with --allow-insecure-server / DSP_ALLOW_INSECURE_SERVER=1."}}
